--- a/config/database.yml
+++ b/config/database.yml
@@ -48,6 +48,9 @@ test:
 #
 production:
   <<: *default
-  database: bootstrap_app_production
-  username: bootstrap_app
-  password: <%= ENV['BOOTSTRAP_APP_DATABASE_PASSWORD'] %>
+  database: <%= ENV['RDS_DB_NAME'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  port: <%= ENV['RDS_PORT'] %>
+
